got rid of some problems in mobile version

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </header>
     <section class="start-page-section">
         <div class="main-container">
-            <h1>Электромонтаж в Калининграде</h1>
-            <h2>Провести электричество для дома и офиса</h2>
+            <h1 class="start-page-title">Электромонтаж в Калининграде</h1>
+            <h2 class="start-page-subtitle">Провести электричество для дома и офиса</h2>
         </div>
     </section>
     <section>
