--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/start-page.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/smarthome-about.css">
+    <link rel="stylesheet" type="text/css" href="css/partners.css">
 </head>
 <body>
     <header>
@@ -48,10 +49,16 @@
         </div>
         
     </section>
-    <section class="smarthome-about">
+    <section class="smarthome-about-section">
         <span class="section-title">Что такое умный дом?</span>
-        <div class="smarthome-about-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, error! Incidunt, libero! Id, voluptas ratione sequi non fugit eligendi ullam? Numquam facilis amet impedit placeat quisquam aspernatur doloribus suscipit minima!
-        Explicabo quae facilis totam mollitia nemo dicta et qui, odit quos est itaque repellat maiores omnis soluta unde minus a. Doloremque quidem consequatur quisquam, minima reprehenderit dolore voluptates quibusdam quae?</div>
+        <div class="smarthome-about-container">
+            <div class="smarthome-about-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, error! Incidunt, libero! Id, voluptas ratione sequi non fugit eligendi ullam? Numquam facilis amet impedit placeat quisquam aspernatur doloribus suscipit minima!
+            Explicabo quae facilis totam mollitia nemo dicta et qui, odit quos est itaque repellat maiores omnis soluta unde minus a. Doloremque quidem consequatur quisquam, minima reprehenderit dolore voluptates quibusdam quae?</div>
+            <div class="arrow">
+                <span class="arrow-left"></span>
+                <span class="arrow-right"></span>
+            </div>
+        </div>
     </section>
     <section class="services-section">
         <span class="section-title">Наши услуги</span>
@@ -67,6 +74,30 @@
             <div class="service">
                 <span class="service-title">Услуга</span>
                 <button class="service-details">Подробнее</button>
+            </div>
+        </div>
+    </section>
+    <section class="partners-section">
+        <span class="section-title">Наши партнёры</span>
+        <div class="partners-container">
+            <div class="partners-slider">
+                <div class="partners-slider-row">
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                </div>
             </div>
         </div>
     </section>
@@ -114,9 +145,9 @@
             </div>
         </div>
     </section> -->
-    <section>
+    <section class="examples-section">
+        <span class="section-title">Примеры наших работ</span>
         <div class="examples-container">
-            <span class="section-title examples-title">Примеры наших работ</span>
             <div class="example-block">
                 <div class="example-img-container">
                     <img src="img/img_template.png" alt="example-img" class="example-img">
